--- a/app/src/main/res/layout/activity_details_.xml
+++ b/app/src/main/res/layout/activity_details_.xml
@@ -9,5 +9,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.brioal.bottomtablayout.Details_Activity">
+<WebView
+    android:id="@+id/detail_web"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+</WebView>
 </RelativeLayout>
