--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.brioal.bottomtablayout.MainActivity">
-
-    <Button
-        android:id="@+id/main_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Add News"
-        android:textAllCaps="false"/>
-
+    <FrameLayout
+        android:layout_above="@+id/main_tab"
+        android:id="@+id/newsApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </FrameLayout>
     <com.brioal.bottomtab.view.BottomLayout
         android:id="@+id/main_tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:background="#ffff">
     </com.brioal.bottomtab.view.BottomLayout>
 </RelativeLayout>
