--- a/app/src/main/res/layout/guide_view3.xml
+++ b/app/src/main/res/layout/guide_view3.xml
@@ -7,17 +7,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@mipmap/guide_img3" />
-    <Button
+        android:src="@mipmap/auto_4" />
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_enter"
         android:layout_width="126dp"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/button_shape"
         android:text="@string/entry"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:visibility="visible" />
-
+        android:visibility="visible"
+        android:padding="12dp"
+        />
 </FrameLayout>
