--- a/app/src/main/res/layout/more_view.xml
+++ b/app/src/main/res/layout/more_view.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/more_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ImageView
+        android:id="@+id/more_Image"
+        android:layout_width="match_parent"
+        android:layout_height="87dp"
+        android:src="@drawable/empty_page"/>
 </LinearLayout>
