--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#dd000000</color>
     <color name="colorPrimaryDark">@color/blue</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorPrimary">@color/black2</color>
+    <color name="colorPrimary">@color/blue</color>
     <color name="blue">#2196F3</color>
     <color name="black2">#232325</color>
     <color name="light_blue">#03A9F4</color>
@@ -22,7 +22,7 @@
     <color name="green">#34515c</color>
     <color name="green_dark">#1e3e4a</color>
     <color name="night_mask">#90000000</color>
-
+    <color name="defaultTextColor">#6f6f6f</color>
     <color name="title_bc_red">#FFEE0000</color> <!--标题背景-->#FF4500
     <color name="title_bc_red_dark">#FF4500</color>
     <color name="title_bc_blue">#3F51B5</color>
@@ -52,6 +52,9 @@
     <color name="black_font">#0F0F0F</color>  <!-- 黑色字体-->
 
     <color name="settings_sumary_font_color">#AAAAAA</color>
-
+    <color name="black_light_10">#A0A0A0</color>
+    <color name="red">#EE7C6B</color>
+    <color name="bc">#363636</color>
+    <color name="md_purple_300">#BA68C8</color>
 
 </resources>
