--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.brioal.bottomtablayout.MainActivity">
-    <FrameLayout
-        android:layout_above="@+id/main_tab"
-        android:id="@+id/newsApp"
+   >
+    <LinearLayout
+        android:layout_above="@+id/tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
-    <com.brioal.bottomtab.view.BottomLayout
-        android:id="@+id/main_tab"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:id="@+id/app_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <me.majiajie.pagerbottomtabstrip.PagerBottomTabLayout
+        android:id="@+id/tab"
         android:layout_alignParentBottom="true"
-        android:background="#ffff">
-    </com.brioal.bottomtab.view.BottomLayout>
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
 </RelativeLayout>
+
+
