--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -4,11 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.brioal.bottomtablayout.api.fragment.todayFragment">
-    <WebView
-        android:id="@+id/todayWebView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </WebView>
+
+
     <!-- TODO: Update blank fragment layout -->
     <com.yalantis.phoenix.PullToRefreshView
         android:id="@+id/swipe_layout2"
@@ -23,13 +20,20 @@
         </android.support.v7.widget.RecyclerView>
 
     </com.yalantis.phoenix.PullToRefreshView>
-    <com.github.ybq.android.spinkit.SpinKitView
-        android:layout_centerInParent="true"
-        android:id="@+id/spin_kit"
-        style="@style/SpinKitView.Large.Circle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:SpinKit_Color="@color/colorAccent"
-        />
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:layout_centerInParent="true"
+            android:id="@+id/spin_kit"
+            style="@style/SpinKitView.Large.Circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:SpinKit_Color="@color/colorAccent"
+            />
+
+    <WebView
+        android:id="@+id/webView"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </WebView>
 </RelativeLayout>
