--- a/app/src/main/res/layout/guide_view1.xml
+++ b/app/src/main/res/layout/guide_view1.xml
@@ -2,22 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+     >
 
     <ImageView
+        android:id="@+id/auto_01"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@mipmap/auto_1"
         />
-<ImageView
-    android:layout_marginTop="10dp"
-    android:id="@+id/jiantou"
-    android:layout_alignParentBottom="true"
-    android:layout_marginRight="10dp"
-    android:layout_alignParentRight="true"
-    android:layout_marginBottom="30dp"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:src="@mipmap/icon_01"/>
+
 </RelativeLayout>
