--- a/app/src/main/res/layout/guide_view4.xml
+++ b/app/src/main/res/layout/guide_view4.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@mipmap/auto_3"/>
-    <ImageView
-        android:layout_marginTop="10dp"
-        android:id="@+id/jiantou"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="20dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@mipmap/icon_06"/>
+        android:scaleType="centerCrop"
+        android:src="@mipmap/auto_3"
+        />
+
 </RelativeLayout>
