--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,18 +9,18 @@
         <item name="android:textSize">@dimen/appIntroHeadingTextSize</item>
         <item name="android:fontFamily">sans-serif-thin</item>
     </style>
-        <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-            <!-- Customize your theme here. -->
-            <item name="colorPrimary">@color/colorPrimary</item>
-            <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-            <item name="colorAccent">@color/colorAccent</item>
-            <item name="android:windowBackground">@color/windows_color</item>
-            <item name="windowActionBar">false</item>
-            <item name="windowActionModeOverlay">true</item>
-            <item name="windowNoTitle">true</item>
-            <item name="android:windowIsTranslucent">true</item>
-            <item name="android:windowAnimationStyle">@style/AnimFade2</item>
-        </style>
+    <style name="AppTheme"
+        parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/windows_color</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
     <style name="AnimFade2" parent="@android:style/Animation.Activity">
         <item name="android:activityOpenEnterAnimation">@anim/slide_in_from_right</item>
         <item name="android:activityOpenExitAnimation">@anim/slide_out_to_left</item>
@@ -246,5 +246,27 @@
 
     <style name="SpinKitView.Small.MultiplePulseRing">
         <item name="SpinKit_Style">MultiplePulseRing</item>
+    </style>
+    <style name="title">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_gravity">right|center_vertical</item>
+
+    </style>
+    <style name="menu">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="textview_allgrade_content">
+        <item name="android:layout_height">20dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_margin">0.5dip</item>
+        <item name="android:background">#ECECEC</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:clickable">true</item>
     </style>
 </resources>
